1.0.27
    Optimized team=, scores= and fixed name= not working on players (their CustomName is null)

1.0.26
    Fixed some usage of distance in min..max in selector, like 0.1..10.

1.0.25
    Added /psudoasraw command that ignore selectors and relative coordinates ~ ^ in command, to only parse the sender selector.

1.0.24
    Fixed error when a @ is used in the command but not as selector.

1.0.23
    Fixed specific issue with local or relative coordinates.

1.0.22
    Fixed issue when a selector doesn't have argument with e.g. only @e[] or @e.

1.0.21
    Selectors can now have spaces between their tags.

1.0.20
    Fixed some bugs with coordinates and code improvement

1.0.19
    Fixed [type=] if the given type contains 'minecraft:'

1.0.18
    Added TabCompleter for the list of available loaded commands and their arguments.

1.0.17
    Added an error message if the sender has no permission
    Optimized code

1.0.16
    Added [gamemode=], identical to [m=]
    Added [dx=] [dy=] [dz=] with almost same behavior than vanilla
    Fixed [x=] [y=] [z=] with floats

1.0.15
    Added support for local coordinates ^
    Fixed /psudoUUID that wasn't fully ok on github (but the 1.0.14 jar was ok)
    Fixed /psudoas with more than one entity as sender
    Fixed relative coordinates
    Fixed [limit=] and [c=]
    Fixed [tag=] for non-player entities
    Fixed [score_---=] [score_---_min=] [scores={}] for non-player entities
    Fixed [x_rotation=] and [y_rotation=]

1.0.14
    Added /psudoUUID for getting the uuid of entities

1.0.13
    Added [x_rotation] and [y_rotation]
    Optimized code

1.0.12
    Fixed returns for command blocks
    Added [limit=] checks
    Fixed randomization code: It will first collect all valid players and select one at random instead of the opposite
    Fixed param names

1.0.11
	Fixed spaces for names(From C4K3)
	Updated to 1.14.
	Updated to Maven

1.0.10
	Added x=, y=, and z= targets to change the location of where the command is sent.
